# evolution

./: .gitignore  CMakeLists.txt  README.md  evolution.cpp  evolution.sln  evolution.vcxproj  evolution.vcxproj.filters  main.cpp
controller/: SimulationController.h
graphics/: Renderer.cpp  UI.cpp
model/: Creature.h  Direction.h  Entity.cpp  Entity.h  Environment.h  Food.h  Gene.h  Position.h  World.cpp  World.h  creatureAndNeuralNet.txt
view/: DrawableEntity.h  Renderer.cpp  Renderer.h  UI.cpp  UI.h
